fixed svg height on ios & svg stoke on mobile & touch-highlight on go back anchor tag

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -73,16 +73,17 @@ section {
 
 	.section-title-svg {
 		max-height: 25rem;
+		height: 100%;
 		width: 100%;
 		vertical-align: top;
 
 		.section-title-text {
 			font-family: "Poppins", sans-serif;
 			fill: none;
-			stroke: rgba(white, 0.2);
 			stroke-width: 1px;
 			text-transform: uppercase;
 			width: 100%;
+			@include svg-stroke;
 		}
 	}
 }
