--- a/src/styles/home/_contact.scss
+++ b/src/styles/home/_contact.scss
@@ -4,7 +4,7 @@
 		margin-bottom: 6rem;
 
 		.section-title-text {
-			font-size: 7.65rem;
+			font-size: 12.1rem;
 		}
 	}
 
